# GLFont

./: CMakeLists.txt  GLFont.vcxproj  GLFont.vcxproj.filters  README.md
include/GLUtils/: GLUtils.h
include/GLWindow/: GLWindow.cpp
shaders/: fontFragment.shader  fontVertex.shader  menuFragment.shader  menuVertex.shader
src/: FTLabel.cpp  FTLabel.h  FontAtlas.cpp  FontAtlas.h  GLFont.cpp  GLFont.h  GLUtils.cpp  GLUtils.h  TestWindow.cpp  TestWindow.h
test/: GLFont.sln  GLFont.vcxproj  GLFont.vcxproj.filters
test/include/GLUtils/: GLUtils.cpp
test/include/GLWindow/: GLWindow.cpp  GLWindow.h
test/src/: TestWindow.cpp  TestWindow.h  main.cpp
